--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
    </head>
 
    <body>
-      <div class="container ratio ratio-1x1">
+      <div class="container">
          <div class="row">
+            <div class="light"></div>
+            <div class="light"></div>
+         </div>
+         <div class="row ratio ratio-1x1">
             <div class="play-area h-100">
                <div
-                  class="bg-danger d-flex justify-content-center align-items-center d-none"
+                  class="bg-danger d-flex justify-content-center align-items-center d-none text-center fs-4"
                   style="z-index: 5"
                   id="game-over"
                >
@@ -38,9 +42,51 @@
                   Play!
                </button>
                <div class="active-body-part" style="grid-area: 12/12"></div>
-               <!-- <div class="active-body-part"></div>
-               <div class="active-body-part"></div>
-               <div class="active-body-part"></div> -->
+            </div>
+         </div>
+         <div class="row py-0 pt-4 text-center justify-content-center">
+            <div class="col-5">
+               <div class="button shadow" onclick="moveForward('ArrowUp')">
+                  △
+               </div>
+            </div>
+         </div>
+         <div class="row py-0 text-center justify-content-center">
+            <div class="col-5">
+               <div class="button shadow" onclick="moveForward('ArrowLeft')">
+                  ◁
+               </div>
+            </div>
+            <div class="col-5">
+               <div class="button shadow" onclick="moveForward('ArrowRight')">
+                  ▷
+               </div>
+            </div>
+         </div>
+         <div class="row py-0 text-center justify-content-center">
+            <div class="col-5">
+               <div class="button shadow" onclick="moveForward('ArrowDown')">
+                  ▽
+               </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col">
+               <div class="row">
+                  <div class="vent"></div>
+                  <div class="vent"></div>
+                  <div class="vent"></div>
+                  <div class="vent"></div>
+                  <div class="vent"></div>
+               </div>
+            </div>
+            <div class="col d-flex align-items-end justify-content-end">
+               <div class="row">
+                  <div
+                     class="pause shadow"
+                     onclick="moveForward('Space')"
+                  ></div>
+               </div>
             </div>
          </div>
       </div>
@@ -48,22 +94,79 @@
 
    <style>
       body {
-         padding-top: 30px;
+         padding-top: 15px;
          box-sizing: border-box;
          width: 100vw;
          height: 100vh;
-         background-color: #5a5a5a;
+         background-color: #131313;
       }
 
       .row {
          left: auto;
          padding: 10px;
+         margin: 5px;
+         width: auto;
       }
 
       .container {
-         max-width: 550px;
+         padding: 20px;
+         padding-top: 0px;
+         padding-bottom: 40px;
+         border-radius: 20px;
+         background-color: #5a5a5a;
+         max-width: 450px;
       }
 
+      .col-5 {
+         display: flex;
+         justify-content: center;
+      }
+
+      .light:nth-child(1) {
+         padding: 0%;
+         margin-right: 15px;
+         height: 10px;
+         width: 10px;
+         background-color: #a8ec55;
+         border-radius: 50px;
+      }
+
+      .light:nth-child(2) {
+         padding: 0%;
+         height: 10px;
+         width: 10px;
+         border-radius: 50px;
+         background-color: #ec5454;
+      }
+
+      .vent {
+         padding: 0%;
+         height: 60px;
+         width: 5px;
+         margin-left: 10px;
+         border-radius: 20px;
+         background-color: #242424;
+      }
+
+      .pause {
+         padding: 0%;
+         width: 60px;
+         height: 20px;
+         border-radius: 20px;
+         background-color: #323232;
+      }
+
+      .button {
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         font-size: 1.5rem;
+         color: rgb(124, 124, 124);
+         width: 65px;
+         height: 65px;
+         background-color: #323232;
+         border-radius: 50px;
+      }
       .play-btn {
          grid-row: 10 / 15;
          grid-column: 8 / 20;
@@ -90,14 +193,14 @@
       }
 
       .active-body-part {
-         background-color: #484848;
-         border: solid 1px #ecefb3;
+         background-color: #393939;
+         outline: solid 1px #ecefb3;
          padding: 0px;
       }
 
       .body-part {
-         background-color: #484848;
-         border: solid 1px #ecefb3;
+         background-color: #646464;
+         border: solid 2px #000000;
          padding: 0px;
       }
    </style>
