--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
    <body>
       <div class="container">
-         <div class="row">
+         <div class="row ps-3 pt-3">
             <div class="light"></div>
             <div class="light"></div>
          </div>
-         <div class="row ratio ratio-1x1">
+         <div class="row ratio ratio-1x1" style="margin: 10px">
             <div class="play-area h-100">
                <div
                   class="bg-danger d-flex justify-content-center align-items-center d-none text-center fs-4"
@@ -44,7 +44,7 @@
                <div class="active-body-part" style="grid-area: 12/12"></div>
             </div>
          </div>
-         <div class="row py-0 pt-4 text-center justify-content-center">
+         <div class="row py-0 pt-2 text-center justify-content-center">
             <div class="col-5">
                <div class="button shadow" onclick="moveForward('ArrowUp')">
                   △
@@ -94,17 +94,16 @@
 
    <style>
       body {
-         padding-top: 15px;
          box-sizing: border-box;
          width: 100vw;
          height: 100vh;
          background-color: #131313;
+         display: flex;
+         align-items: center;
       }
 
       .row {
          left: auto;
-         padding: 10px;
-         margin: 5px;
          width: auto;
       }
 
@@ -114,7 +113,7 @@
          padding-bottom: 40px;
          border-radius: 20px;
          background-color: #5a5a5a;
-         max-width: 450px;
+         max-width: 350px;
       }
 
       .col-5 {
@@ -145,11 +144,12 @@
          width: 5px;
          margin-left: 10px;
          border-radius: 20px;
-         background-color: #242424;
+         background-color: rgb(37, 37, 37);
       }
 
       .pause {
          padding: 0%;
+         margin-right: 15px;
          width: 60px;
          height: 20px;
          border-radius: 20px;
@@ -162,8 +162,9 @@
          justify-content: center;
          font-size: 1.5rem;
          color: rgb(124, 124, 124);
-         width: 65px;
-         height: 65px;
+         outline: solid 4px #323232;
+         width: 50px;
+         height: 50px;
          background-color: #323232;
          border-radius: 50px;
       }
