--- a/index.html
+++ b/index.html
@@ -53,12 +53,18 @@
          </div>
          <div class="row py-0 text-center justify-content-center">
             <div class="col-5">
-               <div class="button shadow" onclick="moveForward('ArrowLeft')">
+               <div
+                  class="button shadow ms-4"
+                  onclick="moveForward('ArrowLeft')"
+               >
                   ◁
                </div>
             </div>
             <div class="col-5">
-               <div class="button shadow" onclick="moveForward('ArrowRight')">
+               <div
+                  class="button shadow me-4"
+                  onclick="moveForward('ArrowRight')"
+               >
                   ▷
                </div>
             </div>
@@ -71,7 +77,7 @@
             </div>
          </div>
          <div class="row">
-            <div class="col">
+            <div class="col ms-3">
                <div class="row">
                   <div class="vent"></div>
                   <div class="vent"></div>
@@ -83,7 +89,7 @@
             <div class="col d-flex align-items-end justify-content-end">
                <div class="row">
                   <div
-                     class="pause shadow"
+                     class="pause shadow me-4"
                      onclick="moveForward('Space')"
                   ></div>
                </div>
