fixed walls collision

--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
 
       .active-body-part {
          background-color: #393939;
-         outline: solid 1px #ecefb3;
+         border: solid 1px #ecefb3;
          padding: 0px;
       }
 
       .body-part {
          background-color: #646464;
-         border: solid 2px #000000;
+         border: solid 1px #ecefb3;
          padding: 0px;
       }
    </style>
