--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
          crossorigin="anonymous"
       ></script>
-      <script defer src="./script copy.js"></script>
+      <script defer src="./script.js"></script>
       <!-- <script defer src="./script.js"></script> -->
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
